--- a/templates/JiraDataCenter.template.yaml
+++ b/templates/JiraDataCenter.template.yaml
@@ -31,8 +31,8 @@ Metadata:
           - DBMasterUserPassword
           - DBMultiAZ
           - DBPassword
+          - DBReadReplicaInstanceClass
           - DBStorage
-          - DBStorageEncrypted
           - DBStorageType
       - Label:
           default: Networking
@@ -56,6 +56,7 @@ Metadata:
           - LocalAnsibleGitRepo
           - LocalAnsibleGitSshKeyName
           - StartCollectd
+          - StorageEncrypted
       - Label:
           default: Application Tuning (Optional) - dbref - https://confluence.atlassian.com/display/AdminJIRAServer/Tuning+database+connections tomcatref - http://tomcat.apache.org/tomcat-7.0-doc/config/http.html
         Parameters:
@@ -123,14 +124,14 @@ Metadata:
         default: DB Pool Maximum Size
       DBPoolMinSize:
         default: DB Pool Minimum Size
+      DBReadReplicaInstanceClass:
+        default: Read Replica Instance Class
       DBRemoveAbandoned:
         default: DB Remove Abandoned?
       DBRemoveAbandonedTimeout:
         default: DB Remove Abandoned Timeout
       DBStorage:
         default: Database storage
-      DBStorageEncrypted:
-        default: Database encryption
       DBStorageType:
         default: Database storage type
       DBTestOnBorrow:
@@ -167,6 +168,8 @@ Metadata:
         default: SSL Certificate ARN
       StartCollectd:
         default: Start the collectd metrics agent
+      StorageEncrypted:
+        default: Encryption
       SubDomainName:
         default: Subdomain for the product
       TomcatAcceptCount:
@@ -191,7 +194,6 @@ Metadata:
         default: Tomcat protocol Scheme
       VPC:
         default: VPC *
-
 Parameters:
   AssociatePublicIpAddress:
     Default: false
@@ -255,6 +257,12 @@ Parameters:
       - m5.4xlarge
       - m5.12xlarge
       - m5.24xlarge
+      - m5a.large
+      - m5a.xlarge
+      - m5a.2xlarge
+      - m5a.4xlarge
+      - m5a.12xlarge
+      - m5a.24xlarge
       - m5d.large
       - m5d.xlarge
       - m5d.2xlarge
@@ -273,6 +281,12 @@ Parameters:
       - r5.4xlarge
       - r5.12xlarge
       - r5.24xlarge
+      - r5a.large
+      - r5a.xlarge
+      - r5a.2xlarge
+      - r5a.4xlarge
+      - r5a.12xlarge
+      - r5a.24xlarge
       - r5d.large
       - r5d.xlarge
       - r5d.2xlarge
@@ -294,7 +308,6 @@ Parameters:
       - x1e.4xlarge
       - x1e.8xlarge
       - x1e.16xlarge
-      - x1e.32xlarge
       - z1d.large
       - z1d.xlarge
       - z1d.2xlarge
@@ -317,7 +330,6 @@ Parameters:
     Description: Size of cluster node root volume in GB (note - size based upon Application indexes x 4)
     Type: Number
   CustomDnsName:
-    Default: ""
     Description: 'Use custom existing DNS name for your Data Center instance. This will take precedence over HostedZone. Please note: you must own the domain and configure it to point at the load balancer.'
     Type: String
   DBInstanceClass:
@@ -413,6 +425,32 @@ Parameters:
     Default: 20
     Description: The minimum number of idle database connections that are kept open at any time
     Type: String
+  DBReadReplicaInstanceClass:
+    Default: none
+    Description: Select an instance class for a read replica DB (will not be used by application; intended for third-party/read-only access). Note that enabling this will require brief downtime for your database if Multi-AZ is not enabled!
+    AllowedValues:
+      - none
+      - db.m4.large
+      - db.m4.xlarge
+      - db.m4.2xlarge
+      - db.m4.4xlarge
+      - db.m4.10xlarge
+      - db.m4.16xlarge
+      - db.r4.large
+      - db.r4.xlarge
+      - db.r4.2xlarge
+      - db.r4.4xlarge
+      - db.r4.8xlarge
+      - db.r4.16xlarge
+      - db.t2.medium
+      - db.t2.large
+      - db.t2.xlarge
+      - db.t2.2xlarge
+      - db.t3.medium
+      - db.t3.large
+      - db.t3.xlarge
+      - db.t3.2xlarge
+    Type: String
   DBRemoveAbandoned:
     Default: true
     Description: Flag to remove abandoned database connections if they exceed the Removed Abandoned Timeout
@@ -425,13 +463,6 @@ Parameters:
     Default: 200
     Description: Database allocated storage size, in gigabytes (GB)
     Type: Number
-  DBStorageEncrypted:
-    Default: false
-    AllowedValues:
-      - true
-      - false
-    Description: Whether or not to encrypt the database
-    Type: String
   DBStorageType:
     Default: General Purpose (SSD)
     AllowedValues:
@@ -463,17 +494,14 @@ Parameters:
     Description: Environment of the application - either Production, Staging, or Disaster Recovery (DR)
     Type: String
   ExternalSubnets:
-    Default: ''
     ConstraintDescription: Must be a list of two or more Subnet IDs within the selected VPC.
     Description: Subnets (two or more) where your user-facing load balancer will be deployed. MUST be within the selected VPC.
     Type: List<AWS::EC2::Subnet::Id>
   HostedZone:
-    Default: ''
     ConstraintDescription: Must be the name of an existing Route53 Hosted Zone.
     Description: The domain name of the Route53 PRIVATE Hosted Zone in which to create cnames
     Type: String
   InternalSubnets:
-    Default: ''
     ConstraintDescription: Must be a list of two or more Subnet IDs within the selected VPC.
     Description: Subnets (two or more) where your cluster nodes and other internal infrastructure will be deployed. MUST be within the selected VPC. Specify the ExternalSubnets again here if you wish to deploy the whole stack into the same subnets.
     Type: List<AWS::EC2::Subnet::Id>
@@ -508,11 +536,9 @@ Parameters:
     Description: The EC2 Key Pair to allow SSH access to the instances
     Type: AWS::EC2::KeyPair::KeyName
   LocalAnsibleGitRepo:
-    Default: ''
     Description: For additional node customization, provide repo location to git clone. This must be in format git@bitbucket.org:atlassian/atlassian-local-ansible-example.git if using Bitbucket Cloud, or ssh://git@stash.example.com:7997/my-local-ansible.git (ie protocol included) if using Bitbucket Server.
     Type: String
   LocalAnsibleGitSshKeyName:
-    Default: ''
     Description: If your git repo is private, provide an AWS Systems Manager ParameterStore key name that holds an SSH private key that can access the repo
     Type: String
   MailEnabled:
@@ -530,12 +556,19 @@ Parameters:
     MaxLength: 90
     Type: String
   StartCollectd:
-    Description: Start the collectd service
     Default: true
     AllowedValues:
       - true
       - false
     ConstraintDescription: Must be 'true' or 'false'.
+    Description: Start the collectd service
+    Type: String
+  StorageEncrypted:
+    Default: false
+    AllowedValues:
+      - true
+      - false
+    Description: Whether or not to encrypt the database and the local storage on the EC2 nodes. EFS encryption is coming soon.
     Type: String
   TomcatAcceptCount:
     Default: 10
@@ -580,7 +613,6 @@ Parameters:
     Type: String
     AllowedValues: [http, https]
   VPC:
-    Default: ''
     ConstraintDescription: Must be the ID of a VPC.
     Description: Virtual Private Cloud
     Type: AWS::EC2::VPC::Id
@@ -591,6 +623,8 @@ Conditions:
     !Not [!Equals [!Ref MailEnabled, true]]
   DoCollectd:
     !Equals [!Ref StartCollectd, true]
+  DoCreateReadReplica:
+    !Not [!Equals [!Ref DBReadReplicaInstanceClass, 'none']]
   DoSetDBMasterUserPassword:
     !Not [!Equals [!Ref DBMasterUserPassword, '']]
   DoSSL:
@@ -603,13 +637,16 @@ Conditions:
     !Not [!Equals [!Ref TomcatContextPath, '']]
   UseCustomDnsName:
     !Not [!Equals [!Ref CustomDnsName, '']]
-  UseDatabaseEncryption:
-    !Equals [!Ref DBStorageEncrypted, true]
+  UseEncryption:
+    !Equals [!Ref StorageEncrypted, true]
   UseHostedZone:
     !Not [!Equals [!Ref HostedZone, '']]
+  UseHostedZoneAndDoCreateReadReplica:
+    !And
+      - !Condition DoCreateReadReplica
+      - !Condition UseHostedZone
   UsePublicIp:
     !Equals [!Ref AssociatePublicIpAddress, 'true']
-
 Mappings:
   AWSInstanceType2Arch:
     c4.xlarge:
@@ -738,6 +775,24 @@ Mappings:
     m5.24xlarge:
       Arch: HVM64
       Jvmheap: 12288m
+    m5a.large:
+      Arch: HVM64
+      Jvmheap: 5120m
+    m5a.xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    m5a.2xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    m5a.4xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    m5a.12xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    m5a.24xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
     m5d.large:
       Arch: HVM64
       Jvmheap: 5120m
@@ -790,6 +845,24 @@ Mappings:
       Arch: HVM64
       Jvmheap: 12288m
     r5.24xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    r5a.large:
+      Arch: HVM64
+      Jvmheap: 12288m
+    r5a.xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    r5a.2xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    r5a.4xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    r5a.12xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    r5a.24xlarge:
       Arch: HVM64
       Jvmheap: 12288m
     r5d.large:
@@ -853,9 +926,6 @@ Mappings:
       Arch: HVM64
       Jvmheap: 12288m
     x1e.16xlarge:
-      Arch: HVM64
-      Jvmheap: 12288m
-    x1e.32xlarge:
       Arch: HVM64
       Jvmheap: 12288m
     z1d.large:
@@ -942,7 +1012,6 @@ Mappings:
       name: jira-software
       shortdisplayname: '"Jira SW"'
       fulldisplayname: '"Atlassian Jira Software"'
-
 Resources:
   JiraClusterNodeRole:
     Type: AWS::IAM::Role
@@ -975,6 +1044,13 @@ Resources:
                     - !Sub '${AWS::StackName} sg'
                 Effect: Allow
                 Resource: ['*']
+        - PolicyName: !Sub '${AWS::StackName}-ansible-custom-policy'
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Action: ['iam:ListRolePolicies', 'iam:GetRolePolicy']
+                Effect: Allow
+                Resource: !Sub 'arn:aws:iam::${AWS::AccountId}:role/${AWS::StackName}-JiraClusterNodeRole*'
   JiraClusterNodeInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
@@ -1004,7 +1080,6 @@ Resources:
       - EFSMountAz1
       - EFSMountAz2
     Metadata:
-      Comment: ''
       AWS::CloudFormation::Init:
         config:
           packages:
@@ -1028,7 +1103,7 @@ Resources:
                   -
                     - !If [SSLScheme, "ATL_SSL_PROXY=true", !Ref "AWS::NoValue"]
                     - !Sub ["ATL_AWS_STACK_NAME=${StackName}", StackName: !Ref "AWS::StackName"]
-                    - !Sub ["ATL_CATALINA_OPTS=\"${CatalinaOpts} ${MailOpts}\"", { CatalinaOpts: !Ref CatalinaOpts, MailOpts: !If [DisableMail, '-Datlassian.mail.senddisabled=true -Datlassian.mail.fetchdisabled=true -Datlassian.mail.popdisabled=true', ''] }]
+                    - !Sub ["ATL_CATALINA_OPTS=\"${CatalinaOpts} ${MailOpts}\"", { CatalinaOpts: !Ref CatalinaOpts, MailOpts: !If [DisableMail, '-Datlassian.mail.senddisabled=true -Datlassian.mail.fetchdisabled=true -Datlassian.mail.popdisabled=true ', ''] }]
                     - !Sub ["ATL_DB_HOST=${DBEndpointAddress}", DBEndpointAddress: !GetAtt DB.Endpoint.Address]
                     - !Sub ["ATL_DB_MAXIDLE=${DBMaxIdle}", DBMaxIdle: !Ref DBMaxIdle]
                     - !Sub ["ATL_DB_MAXWAITMILLIS=${DBMaxWaitMillis}", DBMaxWaitMillis: !Ref DBMaxWaitMillis]
@@ -1172,7 +1247,9 @@ Resources:
       BlockDeviceMappings:
         - DeviceName: /dev/xvda
           Ebs:
+            Encrypted: !If [UseEncryption, true, false]
             VolumeSize: !Ref ClusterNodeVolumeSize
+            VolumeType: gp2
         - DeviceName: /dev/xvdf
           Ebs: {}
           NoDevice: true
@@ -1237,17 +1314,19 @@ Resources:
     Type: AWS::RDS::DBInstance
     Properties:
       AllocatedStorage: !Ref DBStorage
+      BackupRetentionPeriod: !If [DoCreateReadReplica, '1', '0']
+      CopyTagsToSnapshot: true
       DBInstanceClass: !Ref DBInstanceClass
       DBInstanceIdentifier: !Ref AWS::StackName
       DBSubnetGroupName: !Ref DBSubnetGroup
       Engine: postgres
       EngineVersion: '9.6'
       Iops: !If [DBProvisionedIops, !Ref DBIops, !Ref 'AWS::NoValue']
-      KmsKeyId: !If [UseDatabaseEncryption, !GetAtt EncryptionKey.Arn, !Ref 'AWS::NoValue']
+      KmsKeyId: !If [UseEncryption, !GetAtt EncryptionKey.Arn, !Ref 'AWS::NoValue']
       MasterUsername: postgres
       MasterUserPassword: !If [DoSetDBMasterUserPassword, !Ref DBMasterUserPassword, !Ref 'AWS::NoValue']
       MultiAZ: !Ref DBMultiAZ
-      StorageEncrypted: !If [UseDatabaseEncryption, !Ref DBStorageEncrypted, !Ref 'AWS::NoValue']
+      StorageEncrypted: !If [UseEncryption, !Ref StorageEncrypted, !Ref 'AWS::NoValue']
       StorageType: !If [DBProvisionedIops, io1, gp2]
       Tags:
         - Key: Name
@@ -1269,6 +1348,29 @@ Resources:
       TTL: '900'
       ResourceRecords:
         - !GetAtt DB.Endpoint.Address
+  DBReplica:
+    Condition: DoCreateReadReplica
+    Type: AWS::RDS::DBInstance
+    Properties:
+      DBInstanceClass: !Ref DBReadReplicaInstanceClass
+      DBInstanceIdentifier: !Sub "${AWS::StackName}-replica"
+      SourceDBInstanceIdentifier: !Ref DB
+      StorageType: gp2
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName} Jira PostgreSQL Read Replica Database"
+      VPCSecurityGroups: [!Ref SecurityGroup]
+  DBReadReplicaCname:
+    Condition: UseHostedZoneAndDoCreateReadReplica
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneName: !Ref HostedZone
+      Comment: Route53 cname for the RDS read replica
+      Name: !Sub "${AWS::StackName}.db-replica.${HostedZone}"
+      Type: CNAME
+      TTL: '900'
+      ResourceRecords:
+        - !GetAtt DBReplica.Endpoint.Address
 # Loadbalancer
   LoadBalancer:
     Type: AWS::ElasticLoadBalancing::LoadBalancer
@@ -1354,7 +1456,7 @@ Resources:
       ToPort: -1
       SourceSecurityGroupId: !Ref SecurityGroup
   EncryptionKey:
-    Condition: UseDatabaseEncryption
+    Condition: UseEncryption
     DeletionPolicy: Retain
     Type: AWS::KMS::Key
     Properties:
@@ -1372,12 +1474,11 @@ Resources:
         - Key: Name
           Value: !Sub "${AWS::StackName} Encryption Key"
   EncryptionKeyAlias:
-    Condition: UseDatabaseEncryption
+    Condition: UseEncryption
     Type: AWS::KMS::Alias
     Properties:
       AliasName: !Sub "alias/${AWS::StackName}"
       TargetKeyId: !Ref EncryptionKey
-
 Outputs:
   ServiceURL:
     Description: The URL to access this Atlassian service
@@ -1416,9 +1517,16 @@ Outputs:
     Description: The Database Connection String
     Value: !GetAtt DB.Endpoint.Address
   DBEncryptionKey:
-    Condition: UseDatabaseEncryption
+    Condition: UseEncryption
     Description: The alias of the encryption key created for RDS
     Value: !Ref EncryptionKeyAlias
+  DBReplicaEndpointAddress:
+    Condition: DoCreateReadReplica
+    Description: The endpoint for the read replica
+    Value: !If
+      - UseHostedZone
+      - !Ref DBReadReplicaCname
+      - !GetAtt DBReplica.Endpoint.Address
   EFSCname:
     Description: The cname of the EFS
     Value: !If
